tests/errors/surf_type_07.ki
# type/operator: a List is not callable
var xs = [1, 2]
discard xs()
